--- a/FAQ
+++ b/FAQ
@@ -1,25 +1,33 @@
-Q(closed): Should the user login to see the content?
+ALL QUESTION ABOUT THE PROJECT SHOULD BE REFLECTED HERE WITH THE FOLLOWING FORMAT 
+Q: (insert your question)
+A: (insert your answer)
+
+If the teacher says something useful for the project, 
+we can create a question that answers that useful information, 
+then we write it here.
+------------------------------------------------------------------------------------------------------------------------------------------
+Q: Should the user login to see the content?
 A: You should have an account in order to evaluate the content, it’s not needed to see the content.
 
-Q(closed): Should someone review the content user post?
+Q: Should someone review the content user post?
 A: No moderation needed, provide mechanism to report.
 
-Q(open): Should users lose points if they post not useful content?
+Q: Should users lose points if they post not useful content?
 A: If there is a violation should lose. If content is not useful you should not be punished.
 
-Q(closed): How should we classificate the content?
+Q: How should we classificate the content?
 A: You should be rewarded if your posts are popular
 
-Q(open): Do all users have equal rights? Or some have more influence/power?
+Q: Do all users have equal rights? Or some have more influence/power?
 A: Some experts can start with more reputation (provide credentials of their knowledge, 
 then we should authenticate it with transparent mechanism). A normal user can become an expert too. 
 Experts can have more power with voting (something reasonable).
 
-Q(closed): Should a report system exist? If so, how should it work?
+Q: Should a report system exist? If so, how should it work?
 A: Fill a form with details, source to demonstrate violation, etc
 
-Q(open):  Should a bot manage the reports or actual workers?
+Q:  Should a bot manage the reports or actual workers?
 A: mixed thing, some automatic process (filters) should report the same thing (or similar) and then present to some moderator
 
-Q(closed): What is the most important thing in this application for you?
+Q: What is the most important thing in this application for you?
 A: Fairness.
